tdf#166945 Revert "tdf#111969 sw: ... last half-character for context menu"

This reverts 24.8 commit 242f6985556af7aac77b68c6dfea20d4b32c5f52.
The problem is that the context menu simply cannot know
which choice the user will choose.
Some actions DEPEND on the cursor being 'closest to the mouse point'
and some actions DEPEND on the cursor being
'inside the character run properties or field'.

That 'mouse point at right click' is completely lost
as soon as the mouse moves to chose something from the context menu,
so it is not available to be re-used by SID_PASTE etc
to re-position the cursor before executing the paste.

The benefits of the now-being-reverted-patch do not
dwarf the already-discovered-downsides,
so I'm just reverting to extract myself from this situation.

Change-Id: I03943cf899e1d18fb3e736d4cccea159abe7332e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196586
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit f656be88a35e1d4e51ddf131f1454acac4f03739)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196679
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>